Bug 130187 - Crash when closing print preview tabbed notebookbar Libreoffice 6.4 (rc 1, rc2 and rc3)
Summary: Crash when closing print preview tabbed notebookbar Libreoffice 6.4 (rc 1, rc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.2 rc
Hardware: All Windows (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.2 target:6.4.1
Keywords: bibisected, bisected, regression
: 130171 130305 130438 130544 130585 130634 130963 131256 132166 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-25 08:02 UTC by Maarten
Modified: 2020-05-25 15:58 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
Print preview notebookbar not opened.. crash is solved (258.73 KB, patch)
2020-02-28 18:22 UTC, Maarten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maarten 2020-01-25 08:02:48 UTC
Description:
LO crashes when using the tabbed notebookbaar as ui and when i am trying to close the print preview window. I opened the option using the icon in the tabbed notebookbar  (CYTL + shift + O). 

Summary: openig print preview in tavved notebookbar works; closing down: crash! 

Steps to Reproduce:
1. open print preview window in tabbed notebookbar  (CTRL + Shift + O)
2. close print preview window
3. crash

Actual Results:
see above

Expected Results:
crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Oliver Brinzing 2020-01-25 09:21:04 UTC
reproducible with:

Version: 6.4.0.3 (x64)
Build-ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU-Threads: 4; BS: Windows 10.0 Build 18363; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

but *not* reproducible with:

Version: 6.3.4.2 (x64)
Build-ID: 60da17e045e08f1793c57c00ba83cdfce946d0aa
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 2 Oliver Brinzing 2020-01-25 09:22:07 UTC
*** Bug 130171 has been marked as a duplicate of this bug. ***
Comment 3 Oliver Brinzing 2020-01-25 13:13:46 UTC Comment hidden (obsolete)
Comment 4 Xisco Faulí 2020-01-27 10:08:29 UTC
Not reproducible in

Version: 7.0.0.0.alpha0+
Build ID: 6b4fe3e44b4daa89fef6a3385919b00472eaed60
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 5 Xisco Faulí 2020-01-27 11:00:51 UTC
i do confirm on Win that the issue was introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4ae5fe896e96d082e21788ae6d42a67133567ba7

author	Jim Raykowski <raykowj@gmail..com>	2019-11-09 16:07:09 -0900
committer	Xisco Faulí <xiscofauli@libreoffice.org>	2019-11-11 11:04:56 +0100
commit 4ae5fe896e96d082e21788ae6d42a67133567ba7 (patch)
tree 1d1c0f02b5fc51a684402c5ae92c3cf039452ebe
parent 938a4d6624a78f3e272b3c4c07f314cb0c6db723 (diff)
tdf#118526 Reload Notebookbar if read mode has switched

Adding Cc: to Jim Raykowski
Comment 6 Jim Raykowski 2020-01-28 07:51:35 UTC





(In reply to Xisco Faulí from comment #5)
> i do confirm on Win that the issue was introduced by:
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=4ae5fe896e96d082e21788ae6d42a67133567ba7
> 
> author	Jim Raykowski <raykowj@gmail..com>	2019-11-09 16:07:09 -0900
> committer	Xisco Faulí <xiscofauli@libreoffice.org>	2019-11-11 11:04:56 +0100
> commit 4ae5fe896e96d082e21788ae6d42a67133567ba7 (patch)
> tree 1d1c0f02b5fc51a684402c5ae92c3cf039452ebe
> parent 938a4d6624a78f3e272b3c4c07f314cb0c6db723 (diff)
> tdf#118526 Reload Notebookbar if read mode has switched
> 
> Adding Cc: to Jim Raykowski

I don't think this is the cause.

Took me a while but I found where I had mentioned this crash. See concern 5 here: 
https://bugs.documentfoundation.org/show_bug.cgi?id=109425#c21

Looks like Mike has fixed this with:
commit afa6a774936c34b09b37ab8539193ac529681798
Author: Mike Kaganski <mike.kaganski@collabora.com>
Date:   Mon Jan 6 10:49:31 2020 +0300

    Don't crash on exiting print preview with Notebookbar   
    
    Regression after commit d05b7b32d9ecb6fcb4a268eb68cdcee09bafa6dd.
Comment 7 Xisco Faulí 2020-01-28 08:15:29 UTC
Hi Jim,
Thanks for the analysis.
I do confirm afa6a774936c34b09b37ab8539193ac529681798 fixes this issue.
However, the crash is no reproducible in

Versión: 6.3.4.2 (x86)
Id. de compilación: 60da17e045e08f1793c57c00ba83cdfce946d0aa
Subprocs. CPU: 2; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded

even though the commit is in libreoffice-6-3 branch < https://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-6-3&id=d05b7b32d9ecb6fcb4a268eb68cdcee09bafa6dd > so I believe 4ae5fe896e96d082e21788ae6d42a67133567ba7 made it easier to be reproducible.

Anyway, let's backport afa6a774936c34b09b37ab8539193ac529681798 to libreoffice-6-4 to fix it there too. Meanwhile, 4ae5fe896e96d082e21788ae6d42a67133567ba7 was reverted in libreoffice-6-3 < https://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-6-3&id=2b73347194dde360d9e4be4526657efb511e72ef > so we are safer there. Later on, we can backport afa6a774936c34b09b37ab8539193ac529681798 to libreoffice-6-3 if needed

Closing as RESOLVED FIXED
Comment 8 Jim Raykowski 2020-01-28 08:25:37 UTC
(In reply to Xisco Faulí from comment #7)
> so I believe
> 4ae5fe896e96d082e21788ae6d42a67133567ba7 made it easier to be reproducible.
> 

I was also thinking that.

Glad I was able to help.
Comment 9 Oliver Brinzing 2020-01-31 10:16:29 UTC
*** Bug 130305 has been marked as a duplicate of this bug. ***
Comment 10 sparkie 2020-02-04 20:20:56 UTC
*** Bug 130438 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2020-02-07 17:07:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/fb2382ad4f33b885650ad5156ccaec4e90661806

tdf#130187: Don't crash on exiting print preview with Notebookbar

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 William Gathoye 2020-02-09 19:52:11 UTC
*** Bug 130544 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2020-02-11 12:53:55 UTC
*** Bug 130585 has been marked as a duplicate of this bug. ***
Comment 14 Xisco Faulí 2020-02-13 11:04:27 UTC
*** Bug 130634 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2020-02-20 21:43:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-4-1":

https://git.libreoffice.org/core/commit/1d51690ffd51cff963a3b083abb288f505f5cc64

tdf#130187: Don't crash on exiting print preview with Notebookbar

It will be available in 6.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2020-02-26 17:24:19 UTC
*** Bug 130963 has been marked as a duplicate of this bug. ***
Comment 17 Maarten 2020-02-28 18:22:24 UTC
Created attachment 158264 [details]
Print preview notebookbar not opened.. crash is solved

Hi all, 

Thanks for the great work (as always). So, I saw that the bug of LO crashing when hitting the priint preview button in the tabbed notebookbar, is solved. 

That is great news! 

However, it seems that the problem is not solved completely. LO does not crash anymore, but the tabbed notebook bar does not dynamically change anymore to the print preview bar. 

So, it remains in the status of the “Start” tab. This means is can not choose any options from the print preview, which is a bit inconvenient for me. 

Maybe you are able to solve this problem too? 

I am using LO on several windows 10 1909 machines. 

Thanks in advance! 

Ciao, 

Maarten
Comment 18 Xisco Faulí 2020-04-17 10:26:05 UTC
*** Bug 132166 has been marked as a duplicate of this bug. ***
Comment 19 Xisco Faulí 2020-04-17 10:27:15 UTC
*** Bug 131256 has been marked as a duplicate of this bug. ***
Comment 20 Xisco Faulí 2020-04-17 12:19:06 UTC
*** Bug 132166 has been marked as a duplicate of this bug. ***